src/objects/ONEN_CampaignMbrStatusSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Campaign_Subtype__c</fullName>
        <label>Campaign Subtype</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check here if this should be the default status value for campaigns of this type.  You can only choose one value as the default</inlineHelpText>
        <label>Default Status?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResponded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counts as Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Label__c</fullName>
        <inlineHelpText>the campaign member status label to be created</inlineHelpText>
        <label>Status Label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Campaign Mbr Status Settings</label>
</CustomObject>